--- a/app/style.css
+++ b/app/style.css
@@ -7,15 +7,11 @@
     position: relative;
 }
 
-.pillbox:hover .pillbox-options{
-    display: inline;
-}
-
 .pillbox-input{
     border: none;
 }
 
-.pillbox li{
+.pillbox .pill{
     display: inline-block;
     padding: 2px;
     margin: 5px;
@@ -24,16 +20,57 @@
     cursor: default;
 }
 
-.pillbox li span{
+.pillbox .pill *{
+    display: inline-block;
+}
+
+.pillbox .pill span{
     cursor: pointer;
 }
 
-.pillbox-options{
-    height: 100px;
+.pillbox-select{
     display: none;
+}
+
+.pillbox-options{
+    overflow-y: scroll;
+    height: 100px;
     width: 100%;
+    border: 2px solid black;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    cursor: default;
+    display: none;
     position: absolute;
-    bottom: -101px;
+    bottom: -102px;
     left: 0;
     z-index: 50;
+}
+
+.show{
+    display: inline;
+}
+
+.pillbox-options .option{
+    cursor: pointer;
+}
+
+.pillbox-options .NGoption{
+    padding: 10px 5px 0 5px;
+}
+
+.pillbox-options .Goption{
+    padding: 10px 5px 0 50px;
+}
+
+.pillbox-options .selected{
+    background-color: rgba(0,0,255,0.75);
+}
+
+.pillbox-options .active{
+    background-color: rgba(255,0,0,0.75);
+}
+
+.pillbox-options .group{
+    padding: 10px 5px 0 5px;
+    font-weight: bold;
 }
