--- a/app/style.css
+++ b/app/style.css
@@ -34,6 +34,7 @@
 
 .pillbox-options{
     overflow-y: scroll;
+    background-color: white;
     height: 100px;
     width: 100%;
     border: 2px solid black;
